compiler/src/test/resources/golden/errors/trait_unbound_tparam.dawn
trait Ord2[T] {
  fn cmp2(a: T, b: T) -> Int
}

fn f[T](a: T, b: T) -> Int = cmp2(a, b)

fn g[T](a: T, b: T) -> Bool = a < b

pub fn main() -> Unit !io = println("x")
