compiler/src/test/resources/golden/errors/trait_unbound_tparam.err
error: `cmp2` requires `Ord2[T]`, but `T` has no such bound
  --> trait_unbound_tparam.dawn:5:30
  |
5 | fn f[T](a: T, b: T) -> Int = cmp2(a, b)
  |                              ^^^^
  = hint: add the bound: [T: Ord2]
error: values of type T cannot be ordered
  --> trait_unbound_tparam.dawn:7:33
  |
7 | fn g[T](a: T, b: T) -> Bool = a < b
  |                                 ^
  = hint: add the bound: [T: Ord]
